# Libtorch-test

./: README.md  download_mnist.py
cpp/: CMakeLists.txt  mnist.cpp
